@@ -1,0 +1,6 @@
+from recensio.theme.browser.homepage import HomepageView
+
+
+class RegioHomepageView(HomepageView):
+
+    review_languages = [u'']
